--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 .display {
   background: #0f172a;
   color: #f8fafc;
-  font-size: 2.2rem;
+  font-size: 1.6rem;
   text-align: right;
   padding: 16px;
   border-radius: 2px;
@@ -66,15 +66,16 @@ body {
 }
 
 .digits {
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
 }
 
-.operators {
-  grid-template-columns: repeat(5, 1fr);
+.equals {
+  grid-row: span 2;
 }
 
-.others {
-  grid-template-columns: 1fr 2fr;
+#zero {
+  grid-column: span 2;
 }
 
 /* Base button styles */
@@ -119,12 +120,19 @@ button:active {
 /* Clear */
 .clear {
   background: #ef4444;
-  color: white;
+  color: #e5e7eb;
   font-weight: bold;
 }
 
 .clear:hover {
   background: #f87171;
+}
+
+/*Back Space*/
+.back-space {
+  background-color: #f59e0b;
+  color: #1e1e2f;
+  font-weight: bold;
 }
 
 /* Equals */
